# google-auth-provider-py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: style.yml  test.yml
google_auth_provider/: provider.py
tests/: conftest.py  test_google_auth_provider.py  test_integration.py
